Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ input[type="file"] {
       
       
     </select>
-    <button onclick="enviar()" id="botao-enviar">Enviar Dados</button>
+    <button onclick="enviar()" id="botao-enviar">Enviar Notícia</button>
     <button id="delete" onclick="deletar()">Deletar noticia</button>
   <br><br>
   <a href="https://dashboard.onesignal.com/apps?page=1">Enviar notificações</a>
